compiler/tests/en/errors/pure_global_write.salam
// EXPECT: E013
mut total := 0

pure func bump(x : int) : int:
    total = total + x
    ret total
end

func main:
    println(bump(2))
end
